[package]
name = "lab"
version = "0.1.0"
authors = ["yunwei37 <1067852565@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.2"

[features]
default = []
short_job_first = []
priority = []

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"